--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -15,6 +15,7 @@
   <body>
     <h1>grunt-leading-quotes</h1>
 
+    <h1><a href="#">“This should be replaced.”<span class="test-empty-element"> </span></a></h1>
     <h1>“This should be replaced.”</h1>
     <h2>“This should be replaced.”</h2>
     <p>“This should be replaced.”</p>
@@ -31,10 +32,22 @@
 
     <ul>
       <li>“This should be replaced.”</li>
-      <li>“This should be replaced.”</li>
+      <li>
+        “This should be replaced.”
+        <ul>
+          <li>This should not be replaced.</li>
+          <li>“This should be replaced.”</li>
+        </ul>
+      </li>
       <LI>“This should be replaced.”</LI>
       <li>This should not be replaced.</li>
-      <li>This should not be replaced.</li>
+      <li>
+        This should not be replaced.
+        <ul>
+          <li>This should not be replaced.</li>
+          <li>“This should be replaced.”</li>
+        </ul>
+      </li>
       <li>This should not be replaced.</li>
     </ul>
 
